<resources>
    <string name="app_name" translatable="false">CV Project</string>
    <string name="app_name_long" translatable="false">CV Project</string>
    <string name="language" comment="Use the abbreviation of Common Voice (e.g. Italian -&gt; it, Swedish -&gt; sv-SE, ect.)&#10;(https://commonvoice.mozilla.org/{YOUR_LANGUAGE_CODE})">en</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="button_home_login">Log in / Sign up</string>
    <string name="button_home_logout">Log out</string>
    <string name="button_home_profile">Profile</string>
    <string name="text_hi_without_username" comment="Text | If it's not set a username">Hi!</string>
    <string name="text_hi_with_username" comment="Text | If it's set the username, like 'Hi, Sav22999!'">Hi, {{username}}!</string>
    <string name="message_log_in_again">The session-id is expired, you need to log in again</string>
    <string name="dashboardStatistics">Statistics</string>
    <string name="dashboardVoicesOnline">Voices online</string>
    <string name="dashboardTabYou">You</string>
    <string name="dashboardTabEveryone">Everyone</string>
    <string name="dashboardToday" comment="Sub-title in Dashboard" maxLength="30">Today</string>
    <string name="dashboardEver" comment="Sub-title in Dashboard">Ever</string>
    <string name="toastNoLoginNoStatistics">You have to log in to see your statistics</string>
    <string name="toastNoLoginNoDailyGoal">You have to log in to set the daily goal</string>
    <string name="textHoursAbbreviation">h</string>
    <string name="textHour" comment="Label in Dashboard, like 'Hour 09:00', etc.">Hour {{hour}}</string>
    <string name="txt_top_contributors">Top contributors</string>
    <string name="txt_top_contributors_recorded">Recorded</string>
    <string name="txt_top_contributors_validated">Validated</string>
    <string name="txt_app_statistics" comment="Title in Dashboard">App statistics</string>
    <string name="txt_current_language" comment="Sub-title in Dashboard">Current language</string>
    <string name="txt_all_languages" comment="Sub-title in Dashboard">All languages</string>
    <string name="txt_not_available_offline" comment="Message text">Not available in offline mode</string>
    <string name="btn_tutorial1" comment="Button">Start</string>
    <string name="btn_tutorial2" comment="Button">Permit</string>
    <string name="btn_tutorial3" comment="Button">Next</string>
    <string name="btn_tutorial4" comment="Button">Try again</string>
    <string name="btn_tutorial5" comment="Button">Finish</string>
    <string name="btn_skip" comment="Button">Skip</string>
    <string name="txt_permission_obtained_first_launch" comment="Message text">Permission obtained</string>
    <string name="txt_permission_denied_first_launch" comment="Message text">Error: permission denied</string>
    <string name="linkTermsCommonVoice" translatable="false">https://commonvoice.mozilla.org/terms</string>
    <string name="txt_introduction_app_first_launch" comment="txt_introduction_app_first_launch&#10;Text | First-run | Don't translate &quot;Saverio Morelli&quot;, &quot;CV Project&quot;, &quot;Common Voice&quot;, &quot;Mozilla&quot;">CV Project is an unofficial app for Mozilla Common Voice. It\'s developed by Saverio Morelli without any support or partnership with Mozilla.</string>
    <string name="txt_accept_terms_first_launch" comment="Text | First-run">By proceeding, you agree to Mozilla\'s Common Voice Terms of Service.</string>
    <string name="txt_microphone_permission_first_launch" comment="Text | First-run">This app needs the "Microphone" permission to record your voice.</string>
    <string name="txt_storage_permission_first_launch" comment="Text | First-run">You can report bugs on GitHub or Telegram. To help the developer understand the issue quickly, you should attach the app\'s log file to your report. The app needs the "Storage" permission to save the log file.</string>
    <string name="txt_offline_mode_first_launch" comment="Text | First-run">You can even contribute while you are offline. The app\'s "Offline mode" will be enabled automatically, and you can continue to record and listen without an Internet connection.</string>
    <string name="txt_themes_first_launch" comment="Text | First-run">Choose your preferred theme. \"Auto\" toggles the theme based on the current time. You can change this later in Settings.</string>
    <string name="txt_turn_on_dark_theme_first_launch" comment="Text | First-run">Dark theme</string>
    <string name="txt_gestures_first_launch" comment="Text | First-run">Some actions have corresponding gestures. For example, you can skip a sentence in Speak by swiping left.</string>
    <string name="txt_customise_gestures_first_launch" comment="Text | First-run">You can customise these gestures in Settings.</string>
    <string name="txt_telegram_group_first_launch" comment="Text | First-run">You can join the Telegram group to get news and support.</string>
    <string name="btn_join_telegram_first_launch" comment="Button">Join group</string>
    <string name="txt_choose_language_first_launch" comment="Text | First-run">Let\'s go! Choose which language you\'d like to speak or listen in. The app will also be shown in that language if a translation is available.</string>
    <string name="txt_loading_page" comment="Label">Loading…</string>
    <string name="txt_profile_username" comment="Label in Profile">Username</string>
    <string name="txt_profile_email" comment="Label in Profile">Email</string>
    <string name="txt_profile_age" comment="Label in Profile">Age</string>
    <string name="txt_profile_gender" comment="Label in Profile">Gender</string>
    <string name="txt_profile_edit_data_alert" comment="Text in Profile | Don't translate Common Voice">To modify your profile information, go to the Common Voice website.</string>
    <string name="txt_login_successful_alert" comment="Message text">Login successful!</string>
    <string name="txt_gender_male" comment="Label in Profile">Male</string>
    <string name="txt_gender_female" comment="Label in Profile">Female</string>
    <string name="txt_gender_other" comment="Label in Profile | Other gender, so not specified">Other</string>
    <string name="btn_badges_loggedin" comment="Button">All badges</string>
    <string name="txt_your_level" comment="Label in Profile | (e.g. Level 1)">Level {{level}}</string>
    <string name="btn_use_a_verification_link_login" comment="Button">I have already a verification link</string>
    <string name="txt_verification_link" comment="Label (Placeholder)">Verification link</string>
    <string name="txt_verification_link_not_valid" comment="Message text">The verification link is not valid</string>
    <string name="btn_open_tutorial_settings" comment="Button in Settings">Reopen tutorial</string>
    <string name="txt_project_github_settings" comment="Button in Settings">Project open-source on GitHub</string>
    <string name="txt_developed_by" comment="Label in Settings">developed by</string>
    <string name="toast_language_changed" comment="Message text">Language successfully set to {{lang}}</string>
    <string name="settingsLanguage" comment="Title in Settings">Language</string>
    <string name="settingsListen" comment="Title in Settings">Listen</string>
    <string name="settingsSpeak" comment="Title in Settings">Speak</string>
    <string name="settingsOther" comment="Title in Settings">Other</string>
    <string name="settingsGeneral" comment="Title in Settings">General</string>
    <string name="settingsUsefulLinks" comment="Title in Settings">Useful links</string>
    <string name="settingsLearnMore" comment="Button in Settings">Learn more</string>
    <string name="radioThemeLight" comment="Radio-Button in Settings">Light</string>
    <string name="radioThemeDark" comment="Radio-Button in Settings">Dark</string>
    <string name="radioThemeAuto" comment="Radio-Button in Settings">Auto</string>
    <string name="txt_donate_paypal_settings" comment="Button in Settings">Support my work. Buy me a coffee 😄</string>
    <string name="txt_autoplay_clips_after_loading_settings" comment="Switch-Button in Settings">Auto-play clip when it\'s loaded</string>
    <string name="txt_dark_theme_settings" comment="Switch-Button in Settings">Dark theme</string>
    <string name="contact_developer_on_telegram" comment="Button in Settings">Contact the developer on Telegram</string>
    <string name="txt_experimental_features" comment="Switch-Button in Settings">Experimental features</string>
    <string name="toast_experimental_features_on" comment="Message text">Experimental features turned on.\nNew features could be unstable and unsafe.</string>
    <string name="txt_log_on_file" comment="Switch-Button in Settings">Save logs to a file</string>
    <string name="toast_log_on_file_on" comment="Message text">Saving logs to a file turned on.\nYou can attach the log.txt file when you report an issue.\nRead more on GitHub.</string>
    <string name="txt_generic_statistics" comment="Switch-Button in Settings">Generic statistics</string>
    <string name="txt_show_string_which_identify_me" comment="Button in Settings">Show the string which identifies me inside the app</string>
    <string name="txt_app_usage_statistics" comment="Switch-Button in Settings">App usage statistics</string>
    <string name="txt_skip_recording_confirmation" comment="Switch-Button in Settings">Skip recording confirmation</string>
    <string name="toast_skip_recording_confirmation_on" comment="Message text">Skip recording confirmation turned on.\nYou will now be able to send recordings without having to listen to them first.</string>
    <string name="txt_translate_the_app_on_crowdin" comment="Button in Settings">Translate the app on Crowdin</string>
    <string name="txt_see_statistics_of_the_app" comment="Button in Settings">See app statistics</string>
    <string name="txt_recording_indicator_sound" comment="Switch-Button in Settings">Recording indicator sound</string>
    <string name="toast_recording_indicator_sound_on" comment="Message text">Recording indicator sound is now turned on.\nA sound will play when you start and stop recording.</string>
    <string name="txt_check_for_updates" comment="Switch-Button in Settings">Check for updates</string>
    <string name="title_report_sentence" comment="Title in Report a sentence">Report sentence:</string>
    <string name="button_send_report" comment="Button">Send report</string>
    <string name="checkbox_reason1_report_sentence" comment="Checkbox">Offensive language</string>
    <string name="checkbox_reason1_report_clip" comment="Checkbox">Offensive speech</string>
    <string name="checkbox_reason2_report" comment="Checkbox">Grammatical / spelling error</string>
    <string name="checkbox_reason3_report" comment="Checkbox">Different language</string>
    <string name="checkbox_reason4_report" comment="Checkbox">Difficult to pronounce</string>
    <string name="checkbox_reason5_report" comment="Checkbox">Other</string>
    <string name="checkbox_reason5_comment_report" comment="Label (Placeholder)">Comment</string>
    <string name="btnOk" comment="Button">OK</string>
    <string name="text_info" comment="Title for Message text">Info</string>
    <string name="check_box_message_dialog" comment="Checkbox (for Message text)">Do not show anymore</string>
    <string name="text_report_website_bug" comment="Message text">If you have issues with the official Common Voice website, please report them on Mozilla Discourse forums or GitHub repository so that Mozilla can fix them.</string>
    <string name="github_name" translatable="false">GitHub</string>
    <string name="mozilla_discourse_name" translatable="false">Mozilla Discourse</string>
    <string name="cancel_daily_goal" comment="Button">Cancel</string>
</resources>