<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_gravity="bottom"
    android:id="@+id/reportSectionBottom"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/top_border_radius_with_border"
    android:paddingStart="20dp"
    android:paddingTop="0dp"
    android:paddingEnd="20dp"
    android:paddingBottom="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <View
        android:id="@+id/viewSeparatorReport"
        android:layout_width="60dp"
        android:layout_height="6dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/top_bottom_border_radius"
        android:backgroundTint="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleReportSentenceClip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_report_sentence"
        android:textAlignment="textStart"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/title_very_small"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSeparatorReport" />

    <CheckBox
        android:id="@+id/checkBoxReason1Report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:buttonTint="@color/colorWhite"
        android:foregroundTint="@color/colorWhite"
        android:paddingStart="10dp"
        android:text="@string/checkbox_reason1_report_clip"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleReportSentenceClip" />

    <CheckBox
        android:id="@+id/checkBoxReason2Report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorWhite"
        android:foregroundTint="@color/colorWhite"
        android:paddingStart="10dp"
        android:text="@string/checkbox_reason2_report"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxReason1Report"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/checkBoxReason3Report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorWhite"
        android:foregroundTint="@color/colorWhite"
        android:paddingStart="10dp"
        android:text="@string/checkbox_reason3_report"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxReason2Report" />

    <CheckBox
        android:id="@+id/checkBoxReason4Report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorWhite"
        android:foregroundTint="@color/colorWhite"
        android:paddingStart="10dp"
        android:text="@string/checkbox_reason4_report"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxReason3Report"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/textReasonOtherReport"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/txt_rounded_darktheme_with_border"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/checkbox_reason5_comment_report"
        android:inputType="text"
        android:maxLines="3"
        android:paddingStart="16sp"
        android:paddingTop="16sp"
        android:paddingEnd="20sp"
        android:paddingBottom="16sp"
        android:singleLine="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorGray"
        android:textCursorDrawable="@null"
        android:textSize="@dimen/text_normal"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxReasonOtherReport"
        tools:visibility="visible" />

    <CheckBox
        android:id="@+id/checkBoxReasonOtherReport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:buttonTint="@color/colorWhite"
        android:foregroundTint="@color/colorWhite"
        android:paddingStart="10dp"
        android:text="@string/checkbox_reason5_report"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_big"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBoxReason4Report" />

    <Button
        android:id="@+id/buttonCancelReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded_darktheme"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/cancel_daily_goal"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReasonOtherReport" />

    <Button
        android:id="@+id/buttonSendReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded_darktheme"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/button_send_report"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textReasonOtherReport" />

</androidx.constraintlayout.widget.ConstraintLayout>