<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/messageDialogSectionMiddleReportBug"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:paddingBottom="20dp">

    <Button
        android:id="@+id/btnMessageDialogReportBugMozillaDiscourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rounded"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/mozilla_discourse_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_button"
        app:layout_constraintStart_toEndOf="@+id/btnMessageDialogReportBugGitHub"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionReportBug" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/messageDialogSectionMessageTypeReportBug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/top_bottom_border_radius_with_border_intern"
        android:backgroundTint="@color/colorDarkDarkGray"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textMessageTypeReportBug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:text="@string/text_info"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/title_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageMessageTypeReportBug"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorTransparent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textMessageTypeReportBug"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_info"
            app:tint="@color/colorWhite" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textDescriptionReportBug"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:text="@string/text_report_website_bug"
        android:textAlignment="viewStart"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageDialogSectionMessageTypeReportBug" />

    <CheckBox
        android:id="@+id/checkDoNotShowAnymoreReportBug"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:buttonTint="@color/colorBlack"
        android:foregroundTint="@color/colorWhite"
        android:paddingStart="10dp"
        android:text="@string/check_box_message_dialog"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnMessageDialogReportBugMozillaDiscourse" />

    <Button
        android:id="@+id/btnOkMessageDialogReportBug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_rounded"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:text="@string/btnOk"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkDoNotShowAnymoreReportBug" />

    <Button
        android:id="@+id/btnMessageDialogReportBugGitHub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_rounded"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/github_name"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/text_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescriptionReportBug" />

</androidx.constraintlayout.widget.ConstraintLayout>